--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^8.3.0",
     "react-scripts": "1.0.13"
   },
   "scripts": {
